--- a/crates/sproc/templates/ds_create.html
+++ b/crates/sproc/templates/ds_create.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %}DocShare - {{ config.name }}{%
+{% extends "base.html" %} {% block title %}Docshare - {{ config.name }}{%
 endblock %} {% block content %}
 <article>
     <div class="footernav">
@@ -27,7 +27,7 @@ endblock %} {% block content %}
 
         <fieldset>
             <legend>Actions</legend>
-            <button>Submit</button>
+            <button class="primary">Submit</button>
         </fieldset>
     </form>
 
