--- a/crates/sproc/templates/base.html
+++ b/crates/sproc/templates/base.html
@@ -1,474 +1,1 @@
-<!doctype html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-        <meta
-            http-equiv="content-security-policy"
-            content="default-src 'self' blob:; img-src * data:; media-src *; font-src *; style-src 'unsafe-inline' 'self' blob: *; script-src 'self' 'unsafe-inline' blob: *; object-src 'self' blob: *; upgrade-insecure-requests; connect-src *; frame-src 'self' blob: data: *"
-        />
-
-        <title>{% block title %}{{ title }}{% endblock %}</title>
-        {% block head %}{% endblock %}
-
-        <style>
-            * {
-                box-sizing: border-box;
-                padding: 0;
-                margin: 0;
-                min-width: 0;
-            }
-
-            :root {
-                color-scheme: light dark;
-                --color-surface: hsl(0, 0%, 100%);
-                --color-lowered: hsl(0, 0%, 95%);
-                --color-raised: hsl(0, 0%, 95%);
-                --color-super-lowered: hsl(0, 0%, 90%);
-                --color-super-raised: hsl(0, 0%, 90%);
-                --color-primary: hsl(212, 45%, 45%);
-                --color-primary-lowered: hsl(212, 45%, 40%);
-                --color-text: hsl(0, 0%, 0%);
-                --radius: 0.125rem;
-            }
-
-            html,
-            body {
-                line-height: 1.5;
-                font-family: ui-sans-serif, system-ui, sans-serif,
-                    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
-                    "Noto Color Emoji";
-                color: var(--color-text);
-                background: var(--color-surface);
-            }
-
-            #page {
-                background: var(--color-surface);
-                padding: 0.5rem;
-            }
-
-            main {
-                margin: auto;
-                width: 100%;
-                max-width: 100%;
-                padding-top: 0.5rem;
-                padding-bottom: 0.5rem;
-            }
-
-            @media (min-width: 768px) {
-                main {
-                    width: calc(
-                        /* 1rem to account for both sides of the #page padding */
-                            80ch + 1rem
-                    );
-                    padding-left: 0.5rem;
-                    padding-right: 0.5rem;
-                }
-            }
-
-            svg.icon {
-                fill: currentColor;
-            }
-
-            ol,
-            ul,
-            menu {
-                list-style: inside;
-                margin: 0 0 1rem 0;
-                padding: 0 0 0 40px;
-            }
-
-            hr {
-                margin-top: 1rem;
-                margin-bottom: 1rem;
-                border-color: var(--color-lowered);
-            }
-
-            p,
-            pre,
-            table,
-            ul,
-            ol {
-                margin-bottom: 1rem;
-            }
-
-            .footernav {
-                display: flex;
-                gap: 0.75rem;
-            }
-
-            .footernav .item {
-                position: relative;
-                margin-left: 0.5rem;
-            }
-
-            .footernav .item:first-child {
-                margin-left: 0;
-            }
-
-            .footernav .item::before {
-                content: "·";
-                position: absolute;
-                left: -0.75rem;
-            }
-
-            .footernav .item:first-child:before {
-                display: none;
-            }
-
-            pre {
-                padding: 0.5rem;
-                border: solid 1px var(--color-lowered);
-                background: var(--color-surface);
-                overflow: auto;
-                max-width: 100%;
-            }
-
-            p,
-            li,
-            span,
-            code {
-                max-width: 100%;
-                overflow-wrap: normal;
-                text-wrap: pretty;
-                word-wrap: break-word;
-                overflow-wrap: anywhere;
-            }
-
-            button,
-            a.button {
-                background: var(--color-lowered);
-                color: var(--color-text);
-                padding: 0.15rem 0.75rem;
-                min-height: 28px;
-                min-width: max-content;
-                width: max-content;
-                border: 0;
-                outline: none;
-                cursor: pointer;
-                border-radius: var(--radius);
-                outline: solid 1px transparent;
-                transition:
-                    background 0.15s,
-                    outline 0.08s,
-                    outline-color 0.15s;
-                user-select: none;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                gap: 0.25rem;
-            }
-
-            button:hover,
-            a.button:hover {
-                background: var(--color-super-lowered);
-            }
-
-            button.primary,
-            a.button.primary {
-                background: var(--color-primary);
-                color: white;
-            }
-
-            button.primary:hover,
-            a.button.primary:hover {
-                background: var(--color-primary-lowered);
-            }
-
-            button:hover {
-                outline: solid 2px var(--color-super-lowered);
-                outline-offset: 2px;
-            }
-
-            textarea {
-                width: 100%;
-                resize: vertical;
-                min-height: 10rem;
-                font-family: monospace;
-                padding: 0.75rem;
-            }
-
-            input,
-            select {
-                padding: 0.25rem 0.75rem;
-                height: 32px;
-            }
-
-            input,
-            textarea,
-            select {
-                background: var(--color-lowered);
-                border: 0;
-                outline: solid 1px transparent;
-                border-radius: var(--radius);
-                transition:
-                    background 0.15s,
-                    outline 0.08s,
-                    outline-color 0.15s;
-            }
-
-            input:focus,
-            textarea:focus,
-            select:focus {
-                outline: solid 2px var(--color-super-lowered);
-                outline-offset: 2px;
-            }
-
-            input:invalid,
-            textarea:invalid,
-            select:invalid {
-                outline: solid 2px #ef4444;
-                outline-offset: 2px;
-            }
-
-            form,
-            fieldset {
-                display: flex;
-                flex-direction: column;
-                gap: 0.2rem;
-                max-width: 100%;
-                border-color: var(--color-lowered);
-                transition: border-color 0.15s;
-            }
-
-            fieldset {
-                padding: 0.5rem;
-                border-radius: calc(var(--radius) * 2);
-            }
-
-            fieldset label:not(:first-of-type) {
-                margin-top: 0.5rem;
-            }
-
-            fieldset .row {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                flex-wrap: wrap;
-            }
-
-            fieldset:hover {
-                border-color: var(--color-super-lowered);
-            }
-
-            .flex-collapse {
-                display: flex;
-                gap: 0.5rem;
-            }
-
-            @media screen and (max-width: 900px) {
-                .flex-collapse {
-                    flex-direction: column;
-                }
-            }
-
-            .card {
-                background: var(--color-lowered);
-                border-radius: calc(var(--radius) * 2);
-                padding: 0.75rem;
-            }
-
-            legend,
-            label {
-                font-weight: bold;
-            }
-
-            form button {
-                width: max-content;
-            }
-
-            button {
-                height: max-content;
-            }
-
-            button:disabled {
-                cursor: not-allowed;
-                opacity: 75%;
-            }
-
-            blockquote {
-                padding-left: 1rem;
-                font-style: italic;
-            }
-
-            h1,
-            h2,
-            h3,
-            h4,
-            h5,
-            h6 {
-                margin: 0;
-                font-weight: 700;
-                width: -moz-max-content;
-                width: max-content;
-                position: relative;
-            }
-
-            h1 {
-                font-size: 2rem;
-                text-align: center;
-                width: 100%;
-            }
-
-            h1.left {
-                text-align: left;
-            }
-
-            h2 {
-                font-size: 1.75rem;
-            }
-
-            h3 {
-                font-size: 1.5rem;
-            }
-
-            h4 {
-                font-size: 1.25rem;
-            }
-
-            h5 {
-                font-size: 1rem;
-            }
-
-            h6 {
-                font-size: 0.75rem;
-            }
-
-            a {
-                text-decoration: none;
-                color: #2949b2;
-            }
-
-            a:hover {
-                text-decoration: underline;
-            }
-
-            nav {
-                background: var(--color-raised);
-                border-bottom: solid 2px var(--color-super-raised);
-                width: 100%;
-                display: flex;
-                justify-content: space-between;
-                color: var(--color-text);
-                padding: 0.25rem;
-                position: sticky;
-                top: 0;
-                z-index: 6374;
-            }
-
-            nav:last-of-type {
-                margin-bottom: 0.2rem;
-            }
-
-            nav span,
-            nav button,
-            nav a.button {
-                border-radius: var(--radius);
-                color: inherit;
-                min-height: max-content;
-                height: max-content;
-                background: inherit;
-                outline: solid 1px transparent;
-                padding: 0rem 0.5rem;
-                transition:
-                    background 0.15s,
-                    outline 0.08s;
-            }
-
-            nav button:hover,
-            nav a.button:hover {
-                background: var(--color-raised);
-                outline: solid 2px var(--color-super-lowered);
-                outline-offset: 2px;
-            }
-
-            nav button.secondary,
-            nav a.button.secondary {
-                background: var(--color-lowered);
-            }
-
-            nav button.secondary:hover,
-            nav a.button.secondary:hover {
-                background: var(--color-super-lowered);
-            }
-
-            @media (prefers-color-scheme: dark) {
-                :root {
-                    --color-surface: hsl(0, 0%, 10%);
-                    --color-lowered: hsl(0, 0%, 20%);
-                    --color-raised: hsl(0, 0%, 8%);
-                    --color-super-lowered: hsl(0, 0%, 25%);
-                    --color-super-raised: hsl(0, 0%, 6%);
-                    --color-text: hsl(0, 0%, 95%);
-                }
-
-                a {
-                    color: #93c5fd;
-                }
-            }
-
-            /* utility */
-            .flex {
-                display: flex;
-            }
-
-            .flex-col {
-                flex-direction: column;
-            }
-
-            .justify-center {
-                justify-content: center;
-            }
-
-            .items-center {
-                align-items: center;
-            }
-
-            .gap-1 {
-                gap: 0.25rem;
-            }
-
-            .gap-2 {
-                gap: 0.5rem;
-            }
-        </style>
-    </head>
-
-    <body>
-        <nav>
-            <a class="button" href="/">
-                <b>{{ config.name }}</b>
-            </a>
-
-            <div class="flex gap-1">
-                {% for button in config.nav %}
-                <a class="button secondary" href="{{ button.1 }}">
-                    {{ button.0 }}
-                </a>
-                {% endfor %}
-            </div>
-        </nav>
-
-        {% block under_nav %}{% endblock %}
-
-        <main>
-            <div id="page">{% block content %}{% endblock %}</div>
-
-            <hr />
-            <div class="footernav justify-center" style="width: 100%">
-                <div class="item">
-                    <a href="/">🌐 Home</a>
-                </div>
-
-                <div class="item">
-                    <a
-                        href="https://github.com/hkauso/xsu/tree/master/crates/sproc"
-                    >
-                        📖 View Source
-                    </a>
-                </div>
-            </div>
-        </main>
-    </body>
-</html>
+../../xsu-cliff/templates/base.html
