--- a/crates/sproc/templates/error.html
+++ b/crates/sproc/templates/error.html
@@ -1,9 +1,1 @@
-{% extends "base.html" %} {% block title %}Error - {{ config.name }}{% endblock
-%} {% block content %}
-<article>
-    <fieldset>
-        <legend>Application Error</legend>
-        <p>{{ error }}</p>
-    </fieldset>
-</article>
-{% call super() %} {% endblock %}
+../../xsu-cliff/templates/error.html
