--- a/crates/xsu-cliff/templates/homepage.html
+++ b/crates/xsu-cliff/templates/homepage.html
@@ -13,7 +13,7 @@ block content %}
     </ul>
 
     <hr />
-    <form action="" method="POST">
+    <form action="/registry" method="POST">
         <fieldset>
             <legend>Enter Admin Mode</legend>
 
