--- a/crates/xsu-cliff/templates/base.html
+++ b/crates/xsu-cliff/templates/base.html
@@ -14,6 +14,11 @@
 
         <link rel="icon" href="/static/favicon.svg" />
 
+        <meta name="theme-color" content="#7cdea3" />
+        <meta property="og:type" content="website" />
+        <meta property="og:site_name" content="{{ config.name }}" />
+        <meta name="description" content="{{ config.description }}" />
+
         <style>
             * {
                 box-sizing: border-box;
