--- a/crates/xsu-cliff/templates/ds_view.html
+++ b/crates/xsu-cliff/templates/ds_view.html
@@ -2,7 +2,7 @@
 head %}
 <meta property="og:title" content="{{ doc.path }}" />
 {% endblock %} {% block under_nav %}
-<nav id="page_actions">
+<nav id="page_actions" style="top: 34px">
     <div class="footernav">
         <div class="item">
             <a href="/doc" class="button">
@@ -40,6 +40,27 @@ head %}
             </div>
         </div>
     </div>
+
+    <button
+        id="nav_toggle"
+        title="Hide Navigation"
+        class="secondary"
+        aria-label="fold_nav"
+        onclick="trigger('app:fold_nav')"
+    >
+        <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 16 16"
+            width="18"
+            height="18"
+            aria-label="Fold-up symbol"
+            class="icon"
+        >
+            <path
+                d="M7.823 1.677 4.927 4.573A.25.25 0 0 0 5.104 5H7.25v3.236a.75.75 0 1 0 1.5 0V5h2.146a.25.25 0 0 0 .177-.427L8.177 1.677a.25.25 0 0 0-.354 0ZM13.75 11a.75.75 0 0 0 0 1.5h.5a.75.75 0 0 0 0-1.5h-.5Zm-3.75.75a.75.75 0 0 1 .75-.75h.5a.75.75 0 0 1 0 1.5h-.5a.75.75 0 0 1-.75-.75ZM7.75 11a.75.75 0 0 0 0 1.5h.5a.75.75 0 0 0 0-1.5h-.5ZM4 11.75a.75.75 0 0 1 .75-.75h.5a.75.75 0 0 1 0 1.5h-.5a.75.75 0 0 1-.75-.75ZM1.75 11a.75.75 0 0 0 0 1.5h.5a.75.75 0 0 0 0-1.5h-.5Z"
+            ></path>
+        </svg>
+    </button>
 </nav>
 {% endblock %} {% block content %}
 <article>
@@ -54,12 +75,17 @@ head %}
         <ul>
             <li>
                 <b>published:</b>
-                <code>{{ doc.date_published }}</code>
+                <code class="date">{{ doc.date_published }}</code>
             </li>
 
             <li>
                 <b>edited:</b>
-                <code>{{ doc.date_edited }}</code>
+                <code class="date">{{ doc.date_edited }}</code>
+            </li>
+
+            <li>
+                <b>by:</b>
+                <a href="/~{{ doc.owner }}">{{ doc.owner }}</a>
             </li>
         </ul>
     </fieldset>
