--- a/crates/xsu-cliff/templates/ds_edit.html
+++ b/crates/xsu-cliff/templates/ds_edit.html
@@ -1,25 +1,7 @@
 {% extends "base.html" %} {% block title %}{{ doc.path }} - {{ config.name }}{%
 endblock %} {% block under_nav %}
-<nav id="page_actions">
+<nav id="page_actions" style="top: 34px">
     <div class="footernav">
-        <div class="item">
-            <a href="/doc" class="button">
-                <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 16 16"
-                    width="18"
-                    height="18"
-                    aria-label="Left arrow symbol"
-                    class="icon"
-                >
-                    <path
-                        d="M7.78 12.53a.75.75 0 0 1-1.06 0L2.47 8.28a.75.75 0 0 1 0-1.06l4.25-4.25a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042L4.81 7h7.44a.75.75 0 0 1 0 1.5H4.81l2.97 2.97a.75.75 0 0 1 0 1.06Z"
-                    ></path>
-                </svg>
-                Root
-            </a>
-        </div>
-
         <div class="item">
             <div class="flex gap-1">
                 <a href="/doc/~{{ doc.owner }}/{{ doc.path }}" class="button">
