--- a/crates/xsu-cliff/templates/ds_view.html
+++ b/crates/xsu-cliff/templates/ds_view.html
@@ -5,24 +5,6 @@ head %}
 <nav id="page_actions" style="top: 34px">
     <div class="footernav">
         <div class="item">
-            <a href="/doc" class="button">
-                <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 16 16"
-                    width="18"
-                    height="18"
-                    aria-label="Left arrow symbol"
-                    class="icon"
-                >
-                    <path
-                        d="M7.78 12.53a.75.75 0 0 1-1.06 0L2.47 8.28a.75.75 0 0 1 0-1.06l4.25-4.25a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042L4.81 7h7.44a.75.75 0 0 1 0 1.5H4.81l2.97 2.97a.75.75 0 0 1 0 1.06Z"
-                    ></path>
-                </svg>
-                Root
-            </a>
-        </div>
-
-        <div class="item">
             <div class="flex gap-1">
                 <a
                     href="/doc/~{{ doc.owner }}/{{ doc.path }}"
@@ -66,7 +48,9 @@ head %}
 <article>
     <fieldset>
         <legend>{{ doc.path }}</legend>
-        <section>{{ xsu_util::ui::render_markdown(doc.content)|safe }}</section>
+        <section id="doc">
+            {{ xsu_util::ui::render_markdown(doc.content)|safe }}
+        </section>
     </fieldset>
 
     <fieldset>
@@ -90,4 +74,98 @@ head %}
         </ul>
     </fieldset>
 </article>
+
+<style>
+    #doc h1,
+    #doc h2,
+    #doc h3,
+    #doc h4,
+    #doc h5,
+    #doc h6 {
+        margin-bottom: 1rem;
+        margin-top: 2rem;
+        font-weight: 700;
+        width: -moz-max-content;
+        width: max-content;
+        position: relative;
+    }
+
+    #doc h1 {
+        margin-bottom: 2.5rem;
+        margin-top: 3.5rem;
+        text-align: center;
+        width: 100%;
+    }
+
+    /* hljs */
+    .hljs {
+        background: transparent !important;
+        color: inherit !important;
+        padding: 0 !important;
+    }
+
+    .hljs-string {
+        color: rgb(63, 98, 18) !important;
+    }
+
+    .hljs-string:is(.dark *) {
+        color: rgb(217, 249, 157) !important;
+    }
+
+    .hljs-keyword,
+    .hljs-name {
+        color: rgb(153, 27, 27) !important;
+    }
+
+    .hljs-keyword:is(.dark *),
+    .hljs-name:is(.dark *) {
+        color: rgb(254, 202, 202) !important;
+    }
+
+    .hljs-property,
+    .hljs-punctuation {
+        color: rgb(29, 78, 216) !important;
+    }
+
+    .hljs-property:is(.dark *),
+    .hljs-punctuation:is(.dark *) {
+        color: rgb(191, 219, 254) !important;
+    }
+
+    .hljs-variable,
+    .hljs-attr,
+    .hljs-title,
+    .hljs-built_in,
+    .hljs-type {
+        color: rgb(91, 33, 182) !important;
+    }
+
+    .hljs-variable:is(.dark *),
+    .hljs-attr:is(.dark *),
+    .hljs-title:is(.dark *),
+    .hljs-built_in:is(.dark *),
+    .hljs-type:is(.dark *) {
+        color: rgb(221, 214, 254) !important;
+    }
+
+    .hljs-comment {
+        color: rgb(0, 0, 0) !important;
+        opacity: 0.75;
+    }
+
+    .hljs-comment:is(.dark *) {
+        color: rgb(255, 255, 255) !important;
+    }
+</style>
+
+<link
+    rel="stylesheet"
+    href="https://unpkg.com/@highlightjs/cdn-assets@11.9.0/styles/default.min.css"
+/>
+
+<script src="https://unpkg.com/@highlightjs/cdn-assets@11.9.0/highlight.min.js"></script>
+
+<script>
+    hljs.highlightAll();
+</script>
 {% call super() %} {% endblock %}
