add(util): sanitize markdown

--- a/crates/xsu-cliff/templates/base.html
+++ b/crates/xsu-cliff/templates/base.html
@@ -101,6 +101,10 @@
                 margin-bottom: 1rem;
             }
 
+            ol {
+                list-style: decimal;
+            }
+
             .footernav {
                 display: flex;
                 gap: 0.75rem;
