--- a/crates/xsu-cliff/templates/ds_edit.html
+++ b/crates/xsu-cliff/templates/ds_edit.html
@@ -35,7 +35,7 @@ endblock %} {% block under_nav %}
                 name="new_path"
                 id="new_path"
                 type="text"
-                placeholder="New Path (no username, no change keeps old path)"
+                placeholder="New Path (no change keeps old path)"
             />
         </fieldset>
 
