--- a/crates/xsu-cliff/templates/base.html
+++ b/crates/xsu-cliff/templates/base.html
@@ -97,7 +97,8 @@
             pre,
             table,
             ul,
-            ol {
+            ol,
+            blockquote {
                 margin-bottom: 1rem;
             }
 
@@ -320,7 +321,17 @@
 
             blockquote {
                 padding-left: 1rem;
-                font-style: italic;
+                border-left: solid 5px var(--color-lowered);
+            }
+
+            blockquote p {
+                white-space: pre;
+                margin: 0;
+                opacity: 75%;
+            }
+
+            blockquote p:is(.dark *) {
+                opacity: 50%;
             }
 
             h1,
@@ -455,6 +466,79 @@
 
             a:is(.dark *) {
                 color: #93c5fd;
+            }
+
+            .markdown-alert-note,
+            .markdown-alert-tip,
+            .markdown-alert-important,
+            .markdown-alert-warning,
+            .markdown-alert-caution {
+                margin-bottom: 1rem;
+                width: 100%;
+                border-radius: 0.25rem;
+                padding: 1rem;
+                display: flex;
+                align-items: center;
+                font-style: normal;
+                border: 0;
+            }
+
+            .markdown-alert-note p,
+            .markdown-alert-tip p,
+            .markdown-alert-important p,
+            .markdown-alert-warning p,
+            .markdown-alert-caution p {
+                opacity: 100% !important;
+            }
+
+            .markdown-alert-note {
+                background: rgb(56 189 248 / 0.25);
+                color: rgb(12, 74, 110);
+            }
+
+            .markdown-alert-note:is(.dark *) {
+                background-color: rgb(56 189 248 / 0.15);
+                color: rgb(125 211 252 / 0.75);
+            }
+
+            .markdown-alert-tip {
+                background-color: rgb(74 222 128 / 0.25);
+                color: rgb(20, 83, 45);
+            }
+
+            .markdown-alert-tip:is(.dark *) {
+                background-color: rgb(74 222 128 / 0.15);
+                color: rgb(134 239 172 / 0.75);
+            }
+
+            .markdown-alert-important {
+                background: rgb(202 56 247 / 0.25);
+                color: rgb(77, 12, 109);
+            }
+
+            .markdown-alert-important:is(.dark *) {
+                background-color: rgb(202 56 247 / 0.15);
+                color: rgb(228 187 249 / 0.75);
+            }
+
+            .markdown-alert-warning {
+                background-color: rgb(253 224 71 / 0.25);
+                color: rgb(113, 63, 18);
+            }
+
+            .markdown-alert-warning:is(.dark *) {
+                background-color: rgb(253 224 71 / 0.15);
+                color: rgb(254 240 138 / 0.75);
+            }
+
+            .markdown-alert-caution {
+                background-color: rgb(248 113 113 / 0.25);
+                color: rgb(127, 29, 29);
+            }
+
+            .markdown-alert-caution:is(.dark *) {
+                background-color: rgb(248 113 113 / 0.15);
+                color: rgb(254 202 202 / 0.75);
             }
 
             /* utility */
