--- a/crates/xsu-cliff/templates/base.html
+++ b/crates/xsu-cliff/templates/base.html
@@ -325,7 +325,7 @@
             }
 
             blockquote p {
-                white-space: pre;
+                white-space: pre-wrap;
                 margin: 0;
                 opacity: 75%;
             }
