fix(cliff): image styling

--- a/crates/xsu-cliff/templates/base.html
+++ b/crates/xsu-cliff/templates/base.html
@@ -568,6 +568,11 @@
                 font-weight: bold;
             }
 
+            img {
+                max-width: 100%;
+                vertical-align: center;
+            }
+
             /* utility */
             .flex {
                 display: flex;
