--- a/crates/xsu-cliff/templates/ds_view.html
+++ b/crates/xsu-cliff/templates/ds_view.html
@@ -45,7 +45,7 @@ head %}
     </button>
 </nav>
 {% endblock %} {% block content %}
-<article>
+<article class="flex flex-col gap-2">
     <fieldset>
         <legend>{{ doc.path }}</legend>
         <section id="doc">
@@ -53,26 +53,44 @@ head %}
         </section>
     </fieldset>
 
-    <fieldset>
-        <legend>Metadata</legend>
+    <div class="flex justify-between gap-2">
+        <div></div>
+        <div class="footernav">
+            <div class="item flex items-center gap-1" title="Edited">
+                <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 16 16"
+                    width="16"
+                    height="16"
+                    aria-label="Pencil symbol"
+                    class="icon"
+                >
+                    <path
+                        d="M11.013 1.427a1.75 1.75 0 0 1 2.474 0l1.086 1.086a1.75 1.75 0 0 1 0 2.474l-8.61 8.61c-.21.21-.47.364-.756.445l-3.251.93a.75.75 0 0 1-.927-.928l.929-3.25c.081-.286.235-.547.445-.758l8.61-8.61Zm.176 4.823L9.75 4.81l-6.286 6.287a.253.253 0 0 0-.064.108l-.558 1.953 1.953-.558a.253.253 0 0 0 .108-.064Zm1.238-3.763a.25.25 0 0 0-.354 0L10.811 3.75l1.439 1.44 1.263-1.263a.25.25 0 0 0 0-.354Z"
+                    ></path>
+                </svg>
 
-        <ul>
-            <li>
-                <b>published:</b>
-                <code class="date">{{ doc.date_published }}</code>
-            </li>
-
-            <li>
-                <b>edited:</b>
                 <code class="date">{{ doc.date_edited }}</code>
-            </li>
+            </div>
 
-            <li>
-                <b>by:</b>
+            <div class="item flex items-center gap-1" title="Owner">
+                <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 16 16"
+                    width="16"
+                    height="16"
+                    aria-label="Person symbol"
+                    class="icon"
+                >
+                    <path
+                        d="M10.561 8.073a6.005 6.005 0 0 1 3.432 5.142.75.75 0 1 1-1.498.07 4.5 4.5 0 0 0-8.99 0 .75.75 0 0 1-1.498-.07 6.004 6.004 0 0 1 3.431-5.142 3.999 3.999 0 1 1 5.123 0ZM10.5 5a2.5 2.5 0 1 0-5 0 2.5 2.5 0 0 0 5 0Z"
+                    ></path>
+                </svg>
+
                 <a href="/~{{ doc.owner }}">{{ doc.owner }}</a>
-            </li>
-        </ul>
-    </fieldset>
+            </div>
+        </div>
+    </div>
 </article>
 
 <style>
@@ -167,5 +185,6 @@ head %}
 
 <script>
     hljs.highlightAll();
+    trigger("app:fold_nav");
 </script>
 {% call super() %} {% endblock %}
